# methods

./: .travis.yml  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: gradient_descent.hpp
lib/src/: const_gradient_descent.cpp  fractional_gradient_descent.cpp  gradient_descent.cpp
methods_tests/: CMakeLists.txt  main.cpp
